--- a/css/inde.css
+++ b/css/inde.css
@@ -5,15 +5,24 @@
 .nav-bar {
     background-color: #232f3e;
     width: 100%;
-    height: 50px;
+    height: 40px;
 }
 #app {
-    padding: 20px;
+    margin: 0;
     background: #bbbdc0;
 } 
 .product {
     display: flex;
     /* text-align: center;  */
+}
+.center-column {
+    width: 760px;
+    display: flex;
+    flex-direction: column;
+}
+.left-column {
+    padding-right: 20px;
+    display: flex;
 }
 .details {
     display: flex;
@@ -23,6 +32,41 @@
 hr {
     margin-left: 0;
     margin-right: 0;
+}
+.cart {
+    position: absolute;
+    right: 15px;
+    top: 2px;
+    color: white;
+    font-weight: bold;
+}
+.cart > img {
+    width: 40px;
+    height: 34px;
+}
+.amount {
+    color: #f08804;
+    position: absolute;
+    left: 13px;
+    top: -3px;
+    text-align: center;
+    min-width: 25px;
+}
+.right-column {
+    padding-left: 20px;
+    display: flex;
+}
+.add-to-cart {
+    background: linear-gradient(to bottom,#f7dfa5,#f0c14b);
+    border-color: #a88734 #9c7e31 #846a29;
+    border-radius: 3px;
+    color: #111;
+    width: 237px;
+    height: 31px;
+}
+.add-to-cart:hover {
+    border-color: #a88734 #9c7e31 #846a29;
+    background: linear-gradient(to bottom, #f5d78e, #eeb933);
 }
 .img {
     width: 150px;
